fix: icon was not aligned

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@
 
 .app__current-container {
     display: flex;
+    height: 157px;
     border: 1px solid rgba(71, 142, 255, 0.8);
     flex-direction: row;
     background-color: rgba(71, 142, 255, 0.8);
@@ -77,7 +78,7 @@
     align-items: center;
     justify-content: center;
     max-height: 15px;
-    margin: 15px 2px;
+    margin: 5px 5px 5px 0px;
 }
 
 .app__current-city {
